# platform-spec

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  platform-spec.code-workspace  pyproject.toml  spec-driven.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE-PROCESS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  schema_proposal.yml
.github/workflows/: lint.yml  publish.yml  stale.yml  test.yml
context/: argocd.md  rollback-patterns.md  slo-budget.md  terragrunt.md
examples/gitops-change/: design.md  impact-analysis.md  proposal.md  runbook.md  tasks.md
examples/iac-change/: design.md  impact-analysis.md  proposal.md  runbook.md  tasks.md
scaffold/: AGENTS.md
schemas/gitops/: README.md  schema.yaml
schemas/gitops/templates/: design.md  impact-analysis.md  proposal.md  runbook.md  tasks.md
schemas/iac/: README.md  schema.yaml
schemas/iac/templates/: design.md  impact-analysis.md  proposal.md  runbook.md  tasks.md
schemas/incident/: README.md  schema.yaml
schemas/incident/templates/: postmortem.md  rca.md  runbook.md
schemas/observability/: README.md  schema.yaml
schemas/observability/templates/: design.md  (+4 more)
src/pspec/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_examples_structure.py  test_schemas_structure.py
validation/: gitops-checklist.md  iac-checklist.md  observability-checklist.md
(+10 files in other folders)
