[project]
name = "pspec"
version = "0.1.0"
description = "Platform Spec CLI — Spec-Driven Development for SRE and Platform Engineering teams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["sre", "platform-engineering", "gitops", "terraform", "argocd", "sdd"]
authors = [
    { name = "Felipe Falcao", email = "felipegfalcao.dev@gmail.com" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-hcl2>=8.1.2",
    "jinja2>=3.1",
]

[project.scripts]
pspec = "pspec.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pspec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
